Fixed #9193 - Pill Text not centered

--- a/src/app/components/badge/badge.css
+++ b/src/app/components/badge/badge.css
@@ -7,7 +7,7 @@
 .p-tag {
     display: inline-block;
     text-align: center;
-    line-height: 1;
+    line-height: 1.5;
 }
 
 .p-tag.p-tag-rounded {
